# BlindGEN

./: .gitignore  .gitmodules  README.md  app.py  blind_engine_sov.pyd  model_dl.py
compact_method/: blind_chat_cpp.py  test_encryption.py
compact_method/compact_seal/: CMakeLists.txt  bindings.cpp
engines/: compact_method.py  engine_compact.py
methods/: methode_HE_SecureNet.py  methode_MOAI.py
moai_method/: blind_chat_moai.py  build_moai.ps1  build_moai.sh  export_gpt2_full.py  export_universal_moai.py  moai_config.yaml  moai_paper_implementation.py  plot_comparaisons.py  run_moai_universal.py
moai_method/moai_seal/: CMakeLists.txt
moai_method/moai_seal/src/: moai_gpt2_engine.cpp  moai_native_inference.cpp  moai_seal_backend.cpp
seal_cpp_backend/: CMakeLists.txt  bindings.cpp
